# UniWhere

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
backend/navigation/: README.md  __init__.py  nav_graph.py  navmesh.py  pyproject.toml  route_planner.py
backend/relocalization/: README.md  __init__.py  ace_network.py  ace_relocalizer.py  pose_solver.py  pyproject.toml
docs/: Entregable-1-1.md  arquitectura-logica.md  colmap-referencia.md  diagrama-arquitectura.md  uso-ace.md  uso-colmap-docker.md  uso-pipeline.md
docs/validation/: colmap_ace_step2_block_g_1200.json  colmap_ace_step2_block_g_1200.md  colmap_ace_step3_block_g_1200.md
preprocesamiento/: run-ace-viewer.sh  run-ace.sh  run-cloudcompare.sh  run-colmap.sh  run-extract-frames.sh  run-mast3r.sh  run-oneformer3d.sh
preprocesamiento/models/mast3r-integration/: mast3r_sfm.py  pyproject.toml
preprocesamiento/models/mast3r-integration/docker/: Dockerfile  run-series.sh
preprocesamiento/models/mast3r-integration/tests/: test_mast3r_sfm.py
preprocesamiento/pipelines/: merge-colmap.sh  merge-mast3r.sh  pipeline.sh  run-parallel-colmap.sh  run-parallel-mast3r.sh
preprocesamiento/visualizadores/ace-rerun/: README.md  pyproject.toml  visualize_ace.py
preprocesamiento/visualizadores/ace-rerun/ace_rerun/: __init__.py  ace_extraction.py  point_cloud.py  poses.py  relocalization.py  stats.py  viewer.py
preprocesamiento/visualizadores/ace-rerun/tests/: test_cli.py  test_relocalization.py  test_stats.py  test_viewer_helpers.py
scripts/: install_tools.ps1  install_tools.sh
(+9 files in other folders)
